Fixed small layout issue on mobile

--- a/style.css
+++ b/style.css
@@ -808,3 +808,7 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+
+#tutorial-box {
+    touch-action: pan-y !important;
+}
